<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SaveLoginInfo</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="name">用户名</string>
    <string name="psd">密码</string>
    <string name="remember_psd">记住密码</string>
    <string name="auto_login">自动登录</string>
    <string name="login">登录</string>


</resources>