<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp">
        <TableRow>
            <TextView 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textSize="18sp"/>
            <EditText 
                android:id="@+id/name"
                android:layout_width="240dp"
                android:layout_height="wrap_content"/>
        </TableRow>
         <TableRow>
            <TextView 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/psd"
                android:layout_marginLeft="20dp"
                android:textSize="18sp"/>
            <EditText 
                android:id="@+id/psd"
               android:layout_height="wrap_content"
                android:inputType="textPassword"/>
        </TableRow>
        </TableLayout>
            <LinearLayout 
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >
                <CheckBox
                    android:id="@+id/rememberPsd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/remember_psd"/>
                 <CheckBox
                    android:id="@+id/autoLogin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/auto_login"/>
                 <Button
                    android:id="@+id/login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/login"/>
                   
        </LinearLayout>

</LinearLayout>